--- a/STEP1/html/page.html
+++ b/STEP1/html/page.html
@@ -20,7 +20,7 @@
 		  <div class="container">
 			<h3><b>City Lights In New Your</b></h3>
 			<p class="sub-title">The city that never sleeps.<p>
-			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park. The Brooklyn Bridge connects Manhattan with the borough of Brooklyn. The iconic Statue of Liberty stands in New York Harbor. To the east, Long Island has beaches, the Montauk Lighthouse, the ritzy Hamptons and Fire Island.</p>
+			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park.</p>
 			<p>
 				<i class="fa fa-clock-o icon-color"></i><span class="icon-color font-size-small" style="margin-right: 15px;">&nbsp;6 mins ago</span>
 				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small">&nbsp;39 comments</span>
@@ -32,7 +32,7 @@
 		  <div class="container">
 			<h3><b>City Lights In New Your</b></h3>
 			<p class="sub-title">The city that never sleeps.<p>
-			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park. The Brooklyn Bridge connects Manhattan with the borough of Brooklyn. The iconic Statue of Liberty stands in New York Harbor. To the east, Long Island has beaches, the Montauk Lighthouse, the ritzy Hamptons and Fire Island.</p>
+			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park.</p>
 			<p>
 				<i class="fa fa-clock-o icon-color"></i><span class="icon-color font-size-small" style="margin-right: 15px;">&nbsp;6 mins ago</span>
 				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small">&nbsp;39 comments</span>
@@ -44,7 +44,7 @@
 		  <div class="container">
 			<h3><b>City Lights In New Your</b></h3>
 			<p class="sub-title">The city that never sleeps.<p>
-			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park. The Brooklyn Bridge connects Manhattan with the borough of Brooklyn. The iconic Statue of Liberty stands in New York Harbor. To the east, Long Island has beaches, the Montauk Lighthouse, the ritzy Hamptons and Fire Island.</p>
+			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park.</p>
 			<p>
 				<i class="fa fa-clock-o icon-color"></i><span class="icon-color font-size-small" style="margin-right: 15px;">&nbsp;6 mins ago</span>
 				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small">&nbsp;39 comments</span>
