--- a/STEP1/html/page.html
+++ b/STEP1/html/page.html
@@ -23,7 +23,7 @@
 			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park.</p>
 			<p>
 				<i class="fa fa-clock-o icon-color"></i><span class="icon-color font-size-small" style="margin-right: 15px;">&nbsp;6 mins ago</span>
-				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small">&nbsp;39 comments</span>
+				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small hover-click">&nbsp;39 comments</span>
 			</p>
 		  </div>
 		</div>
@@ -35,7 +35,7 @@
 			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park.</p>
 			<p>
 				<i class="fa fa-clock-o icon-color"></i><span class="icon-color font-size-small" style="margin-right: 15px;">&nbsp;6 mins ago</span>
-				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small">&nbsp;39 comments</span>
+				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small hover-click">&nbsp;39 comments</span>
 			</p>
 		  </div>
 		</div>
@@ -47,7 +47,7 @@
 			<p>New York is a state in the northeastern U.S., known for New York City and towering Niagara Falls. NYC’s island of Manhattan is home to the Empire State Building, Times Square and Central Park.</p>
 			<p>
 				<i class="fa fa-clock-o icon-color"></i><span class="icon-color font-size-small" style="margin-right: 15px;">&nbsp;6 mins ago</span>
-				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small">&nbsp;39 comments</span>
+				<i class="fa fa-comments-o icon-color"></i><span class="icon-color font-size-small hover-click">&nbsp;39 comments</span>
 			</p>
 		  </div>
 		</div>
